samples/_failures_safe/1761040529_160f6e_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_cbe07aa4.c: In function ‘tokenize’:
./samples/SAFE/__tmp_cbe07aa4.c:157:13: error: expected declaration or statement at end of input
  157 |             column += advance;
      |             ^~~~~~
./samples/SAFE/__tmp_cbe07aa4.c:157:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_cbe07aa4.c:157:13: error: expected declaration or statement at end of input
